--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 tui = "0.18"
 crossterm = "0.23"
-rust-crypto = "0.2"
 serde_json = "1.0"
 ansi_term = "0.12"
 unicode-width = "*"
+base64 = "*"
+aes = "0.8"
